--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link 
+    rel="stylesheet" 
+    href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
+    crossorigin="anonymous"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
     <!-- CONTACT PAGE -->
-    <!-- TODO: Navbar here -->
-    <!-- TODO: Banner Image here-->
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="menu.html">Menu</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <img id="banner" alt="Banner Image" src="./assets/images/banner.png">
     <main>
         <h2>Hours of Operation</h2>
         <p>
@@ -20,7 +40,13 @@
         </p>
         <h2>Contact Info</h2>
         <p>
-            <strong>Phone Number:</strong> TBD
+            <strong>Phone Number: 215-490-7788</strong>
+        </p>
+        <p>
+            <strong>Address: 2134 South Craig Street, Pittsburgh, Florida</strong>
+        </p>
+        <p>
+            <strong>Email: customerservice@gmail.com</strong>
         </p>
     </main>
 </body>
